--- a/djangoal/teams/templates/teams/team_detail.html
+++ b/djangoal/teams/templates/teams/team_detail.html
@@ -11,4 +11,6 @@
 	<li>{{ player.name }} - {{ player.get_position_display }}</li>
 {% endfor %}
 </ul>
+<hr>
+<p><a href="{% url 'teams:update' pk=team.pk %}" class="btn">Edit</a></p>
 {% endblock %}
