--- a/djangoal/teams/templates/teams/team_detail.html
+++ b/djangoal/teams/templates/teams/team_detail.html
@@ -11,6 +11,15 @@
 	<li>{{ player.name }} - {{ player.get_position_display }}</li>
 {% endfor %}
 </ul>
+
+{% if user == team.coach %}
+<hr>
+<form method='POST'>
+	{% csrf_token %}
+	{{ form.as_p }}
+	<input type="submit" class="btn btn-primary" value="Save">
+</form>
+{% endif %}
 <hr>
 <p><a href="{% url 'teams:update' pk=team.pk %}" class="btn">Edit</a></p>
 {% endblock %}
