--- a/djangoal/teams/templates/teams/team_list.html
+++ b/djangoal/teams/templates/teams/team_list.html
@@ -13,4 +13,13 @@
 		{% team_avatar team %}
 	{% endfor %}
 </div>
+
+{% if user.is_authenticated %}
+<hr>
+<form method='POST'>
+	{% csrf_token %}
+	{{ form.as_p }}
+	<input type="submit" class="btn btn-primary" value="Save">
+</form>
+{% endif %}
 {% endblock %}
